--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 			}
 		</style>
 
-		<script src="/p5.js"></script>
-		<script src="/sketch.js"></script>
+		<script src="p5.js"></script>
+		<script src="sketch.js"></script>
 	</head>
 
 	<body>
